--- a/config/mapping.yaml
+++ b/config/mapping.yaml
@@ -33,6 +33,7 @@ mapping:
   extrinsic_est_en: true
   extrinsic_T: [0, 0, 0.28]
   extrinsic_R: [1, 0, 0, 0, 1, 0, 0, 0, 1]
+  map_type: 1 # 1:PCL 2:NDT
 point_filter_num: 3
 max_iteration: 10
 imu_has_gravity: true
